fix mob spacing 3

--- a/taipei.css
+++ b/taipei.css
@@ -223,7 +223,7 @@ svg:hover {
     }
 }
 
-@media (max-width: 900px) { /* mob */
+@media (max-width: 800px) { /* mob */
 
     .the-grid {
         display: grid;
@@ -235,8 +235,8 @@ svg:hover {
     }
 
     .byline {
-        font-size: 0.7rem;
-        padding: 0px 10px 15px 10px;
+        font-size: 0.8rem;
+        padding: 0px 30px 40px 30px;
         /* margin: auto 0;
         padding-top: 10vh;
         width: 100%;
@@ -254,7 +254,7 @@ svg:hover {
     }
 
     #mapid { 
-        margin: 10px 10px 10px 10px;
+        margin-top: 10px;
     }
 }
 
